added some hover effect and file

--- a/html/ppp.html
+++ b/html/ppp.html
@@ -5,10 +5,11 @@
 				Anchor State | Icon Hover CSS
 		</title>
 		<link href="./scc.css" rel="stylesheet">
+		<link rel="stylesheet" href="hover.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
-		<div class="main">
+		<div class="main hvr-bounce-out">
 			<a href ="https://hindujacollege.in">Hinduja College</a>
 			<h1>Diwali</h1>
 
@@ -19,7 +20,7 @@
 <br>
 
 <p>Used on a button:</p>
-<button style="font-size:24px">Button <i class="fa fa-bomb"></i></button>
+<button style="font-size:24px">DABA MAAT !!! <i class="fa fa-bomb"></i></button>
 
 <p>Unicode:</p>
 <i style="font-size:24px" class="fa">&#xf1e2;</i>
