--- a/html/ppp.html
+++ b/html/ppp.html
@@ -9,7 +9,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
-		<div class="main hvr-bounce-out">
+		
+		<div class="main hvr-wobble-horizontal">
 			<a href ="https://hindujacollege.in">Hinduja College</a>
 			<h1>Diwali</h1>
 
@@ -20,7 +21,7 @@
 <br>
 
 <p>Used on a button:</p>
-<button style="font-size:24px">DABA MAAT !!! <i class="fa fa-bomb"></i></button>
+<a href="https://en.wikipedia.org/wiki/Diwali"><button style="font-size:24px">DABA MAAT !!! <i class="fa fa-bomb"></i></button></a>
 
 <p>Unicode:</p>
 <i style="font-size:24px" class="fa">&#xf1e2;</i>
