created half project

--- a/07_Projects/changing_color/randomColors.html
+++ b/07_Projects/changing_color/randomColors.html
@@ -24,6 +24,21 @@
 
     console.log(randomColor())
 
+    let changeBgcolor = function(){
+        document.body.style.backgroundColor = randomColor();
+
+    let stopchangingColor = function(){
+        
+    }
+    }
+    let intervalId
+    document.querySelector("#start").addEventListener('click',function(){
+       intervalId = setInterval(changeBgcolor,1000);
+    })
+
+    document.querySelector('#stop').addEventListener('click',function(){
+        clearInterval(intervalId);
+    })
 
 </script>
 </html>
