--- a/09_Advance/index.html
+++ b/09_Advance/index.html
@@ -9,15 +9,15 @@
 <body>
 
 <div class="card">
-  <img src="" alt="John" style="width:100%">
+  <img src="" alt="User Image" style="width:100%">
   <h1></h1>
   <!-- <p class="title"></p> -->
-  <p>followers</p>
+  <p></p>
   <a href="#"><i class="fa fa-dribbble"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-facebook"></i></a>
-  <p><button type="button" onclick="loadDOC()">Contact</button></p>
+  <p><button type="button" onclick="loadDOC()">Get Details</button></p>
 </div>
 </body>
 <script>
